syntax = "proto3";

package proto;
option go_package = ".;proto";

import "google/protobuf/timestamp.proto";

service ReportService {
  rpc ListReports(ListReportsRequest) returns (ListReportResponse) {}
}


message ListReportsRequest {
  ReportType filter = 1;
  int64 page = 2;
  int64 size = 3;
}

message ListReportResponse {
  int64 total_count = 1;
  int64 total_pages = 2;
  int64 page = 3;
  int64 size = 4;
  bool has_more = 5;
  repeated Report reports = 6;
}

message Report {
  string id = 1;
  ReportType type = 2;
  string topic = 3;
  google.protobuf.Timestamp created_time = 4;
  string report_data = 5;
}

enum ReportType {
  REPORT_TYPE_JOB = 0;
  REPORT_TYPE_UNKNOWN = 1;
}